--- a/app/blocks/grid/nd-grid.scss
+++ b/app/blocks/grid/nd-grid.scss
@@ -36,6 +36,11 @@
     @include rule(margin-right, (xl: -12px, xlg: -12, lg: -12, md: -12, sm: -12));
   }
 
+  &_gap36 {
+    @include rule(margin-left, (xl: -18px, xlg: -18, lg: -18, md: -18, sm: -12));
+    @include rule(margin-right, (xl: -18px, xlg: -18, lg: -18, md: -18, sm: -12));
+  }
+
   &_int28 {
     margin-top: -28px;
 
@@ -120,6 +125,11 @@
     #{$b}_gap25 & {
       @include rule(padding-left, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
       @include rule(padding-right, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+    }
+
+    #{$b}_gap36 & {
+      @include rule(padding-left, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 12));
+      @include rule(padding-right, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 12));
     }
 
     #{$b}_int28 & {
