--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -194,6 +194,11 @@
       @include rule(height, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
     }
 
+    &_back {
+      @include rule(width, (xl: 9px, xlg: 9, lg: 9, md: 9, sm: 9));
+      @include rule(height, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 14));
+    }
+
     &_nd-plus {
       @include rule(width, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 22));
       @include rule(height, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 22));
