--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -1137,6 +1137,12 @@
       }
     }
 
+    &_mt30 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 30px, xlg: 30, lg: 25, md: 42, sm: 30));
+      }
+    }
+
     &_mt55 {
       &:not(:first-child) {
         @include rule(margin-top, (xl: 55px, xlg: 55, lg: 48, md: 55, sm: 18));
