--- a/app/blocks/text-block/text-block.pug
+++ b/app/blocks/text-block/text-block.pug
@@ -5,4 +5,5 @@ mixin text-block()
 mixin text-block-image(img)
   +e.media&attributes(attributes)
     +e.PICTURE.image
+      block
       IMG(src=img)
