--- a/app/components/popup-standart/popup-standart.scss
+++ b/app/components/popup-standart/popup-standart.scss
@@ -36,6 +36,10 @@
         text-align: center;
       }
     }
+
+    &_tal {
+      text-align: left;
+    }
   }
 
   &__describe {
@@ -217,6 +221,13 @@
 
       @include rule(height, (xl: 74px, xlg: 74, lg: 74, md: 74, sm: 72));
       @include rule(width, (xl: 68px, xlg: 68, lg: 68, md: 68, sm: 54));
+    }
+  }
+
+  &_debit {
+
+    .records {
+      margin-top: 0;
     }
   }
 }
