--- a/app/components/registration-form/registration-form.scss
+++ b/app/components/registration-form/registration-form.scss
@@ -530,4 +530,21 @@
       }
     }
   }
+
+  &_confirm {
+    max-width: none;
+
+    .nd-grid {
+      @include rule(margin-top, (xl: -40px, xlg: -40, lg: -40, md: -40, sm: -23));
+    }
+
+    .nd-form {
+
+      &__title {
+        &_mb {
+          @include rule(margin-bottom, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 10));
+        }
+      }
+    }
+  }
 }
