--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -195,6 +195,7 @@ include ../blocks/tabs/tabs
 include ../blocks/team-check/team-check
 include ../blocks/text-block/text-block
 include ../blocks/text-list/text-list
+include ../blocks/tile-link/tile-link
 include ../blocks/time/time
 include ../blocks/timer/timer
 include ../blocks/tip/tip
@@ -245,6 +246,7 @@ include ../components/offer-short/offer-short
 include ../components/page-header/nd-page-header
 include ../components/page-header/page-header
 include ../components/password-form/password-form
+include ../components/pay-form/pay-form
 include ../components/payment-form/payment-form
 include ../components/payment-method/payment-method
 include ../components/payment-summary/payment-summary
@@ -260,6 +262,7 @@ include ../components/popup-cancelation-contract/popup-cancelation-contract
 include ../components/popup-cancelation-contract/popup-cancelation-contract-unsigned
 include ../components/popup-cancellation/popup-cancellation
 include ../components/popup-chat/popup-chat
+include ../components/popup-debit-list/popup-debit-list
 include ../components/popup-document/popup-document
 include ../components/popup-image-cropper/popup-image-cropper
 include ../components/popup-invoice/popup-invoice
