--- a/app/pages/guest-account/guest-account-payments-add.pug
+++ b/app/pages/guest-account/guest-account-payments-add.pug
@@ -33,7 +33,7 @@ block content
           +nd-side-navigation(nav, 'Payment methods')._profile
 
       +nd-content-main
-        +payment-form
+        +payment-form({})
 
 block panels
 
