--- a/app/pages/signup/nd-signup-data.pug
+++ b/app/pages/signup/nd-signup-data.pug
@@ -23,7 +23,7 @@ block content
       +e.title Account registration
     .nd-container
       +e.form
-        +registration-form-new({title: 'Join Spacepool', regform: true})
+        +registration-form-new({title: 'Join Spacepool', regform: true})(data-validated-form)
 
 block panels
 
