--- a/app/pages/signup/nd-signup-lead.pug
+++ b/app/pages/signup/nd-signup-lead.pug
@@ -23,7 +23,7 @@ block content
       +e.title Account registration
     .nd-container
       +e.request
-        +registration-form-new({title: 'Join Spacepool', lead: true})
+        +registration-form-new({title: 'Join Spacepool', lead: true})(data-validated-form)
       +e.describe
         +e.bg
           +e.PICTURE.image
