--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -42,10 +42,16 @@ block content
             +e.head
               +page-title Registration Steps
             +e.list
-              +nd-link(href="nd-signup-lead.html") Spacepool - Join Spacepool - Lead (nd-signup-lead.html)
-              +nd-link(href="nd-signup-data.html") Spacepool - Join Spacepool - Form (nd-signup-data.html)
-              +nd-link(href="nd-signup-verify.html") Spacepool - Registration verification (nd-signup-verify.html)
-              +nd-link(href="nd-signup-ready2.html") Spacepool - Regestration complete (nd-signup-ready2.html)
+              +nd-link(href="nd-signup-lead.html") Spacepool - Registration - Title page (nd-signup-lead.html)
+              +nd-link(href="nd-signup-data.html") Spacepool - Registration - Form (nd-signup-data.html)
+              +nd-link(href="nd-signup-verify.html") Spacepool - Registration - Verification page (nd-signup-verify.html)
+              +nd-link(href="nd-signup-ready2.html") Spacepool - Regestration - Complete (nd-signup-ready2.html)
+              +nd-link(href="guest-account-company.html") Spacepool - Regestration - Guest Account | Company details (guest-account-company.html)
+              +nd-link(href="payment-details.html") Spacepool - Regestration - Payment Details  (payment-details.html)
+              +nd-link(href="payment-details-mr.html") Spacepool - Regestration - Payment Details | Meeting Room (payment-details-mr.html)
+              +nd-link(href="direct-debit.html") Spacepool - Regestration - New Direct Debit  (direct-debit.html)
+              +nd-link(href="direct-debit-info.html") Spacepool - Regestration - New Direct Debit | Info  (direct-debit-info.html)
+              +nd-link(href="#popup-debit-list").js-nd-popup Попап account direct debit (#popup-debit-list)
           +e.group#nd-popups
             +e.head
               +page-title Попапы
@@ -163,3 +169,4 @@ block popups
   +popup-standart(getData('nd-standart-popups.json')['type3.2'])#popup-type3-v3
   +popup-standart(getData('nd-standart-popups.json')['type3.3']).nd-popup_orange#popup-type3-v4
   +popup-standart(getData('nd-standart-popups.json')['type3.4']).nd-popup_red#popup-type3-v5
+  +popup-debit-list#popup-debit-list
