--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -228,6 +228,7 @@ $nd-color-border-gray: #d3dfed;
 $nd-color-green: #69c693;
 $nd-color-border-blue: #106dc2;
 $nd-color-error-text: #d33427;
+$nd-color-payment-border: #e5eef0;
 
 // ##########
 // Transitions
